--- a/HelloAndroid/res/layout/wifi_hello_wifi_scanresult.xml
+++ b/HelloAndroid/res/layout/wifi_hello_wifi_scanresult.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
-  android:orientation="vertical"
+  android:orientation="horizontal"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent">
-  <Button
-    android:text="@string/HelloAndroid_ButtonHelloWifi"
-    android:id="@+id/HelloAndroid_ButtonHelloWifi"
+  <TextView
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"></Button>
+    android:layout_height="wrap_content"
+    android:text="@string/WifiHelloAndroidScanResult_Ssid" />
 </LinearLayout>
